--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <body>
 <h1>Desarrollo Full-Stack Nivel 3 SAMSUNG DESARROLLADORAS</h1>
 <h1> Pimera Práctica TypeScript</h1>
-<script type="module" src="./main.js">
-
-</script>
+<script src="./dist/main.umd.js"></script>
 
 
 </body>
